...
    func menuNeedsUpdate(_ menu: NSMenu) {
        menu.removeAllItems()
        addAccessibilityWarningIfNeeded(to: menu)
        addAutoSwitchWarningIfNeeded(to: menu)
        addSiteSection(to: menu)

        menu.addItem(withTitle: "Settings…", action: #selector(showSettings), keyEquivalent: ",").target = self

        menu.addItem(.separator())
        menu.addItem(withTitle: "Quit", action: #selector(quit), keyEquivalent: "q").target = self
    }

    private func addAccessibilityWarningIfNeeded(to menu: NSMenu) {
...
